--- a/Angular Project/src/app/matable/matable.component.html
+++ b/Angular Project/src/app/matable/matable.component.html
@@ -1,63 +1,67 @@
-<div class="container col-xs-6" *ngIf="myAnchors">
-  <app-navbar></app-navbar>
-  <h2 class="sub-header">My Anchors</h2>
-  <div [ngSwitch]="myAnchors?.length">
-    <div *ngSwitchCase=0>
-      No Accounts Found.
+<div *ngIf="managerAcc">
+  <div class="container col-xs-6">
+    <app-navbar></app-navbar>
+    <h2 class="sub-header">My Anchors</h2>
+    <div [ngSwitch]="myAnchors?.length">
+      <div *ngSwitchCase=0>
+        No Accounts Found.
+      </div>
+      <table *ngSwitchDefault class="table table-striped table-condensed">
+        <thead>
+          <tr>
+            <th class="w-50">
+              Name
+            </th>
+            <th>
+              Points
+            </th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let account of myAnchors; let i = index">
+            <td>
+              {{account.userName}}
+            </td>
+            <td>
+              {{account.points}}
+              <button (click)="removeAnchor(i)" class="btn btn-danger font-weight-bold text-white float-right w-25">Remove</button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
     </div>
-    <table *ngSwitchDefault class="table table-striped table-condensed">
-      <thead>
-        <tr>
-          <th class="w-50">
-            Name
-          </th>
-          <th>
-            Points
-          </th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let account of myAnchors; let i = index">
-          <td>
-            {{account.userName}}
-          </td>
-          <td>
-            {{account.points}}
-            <button (click)="removeAnchor(i)" class="btn btn-danger font-weight-bold text-white float-right w-25">Remove</button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
   </div>
-</div>
-<div class="container col-xs-6">
-  <h2 class="sub-header">Available Anchors</h2>
-  <div [ngSwitch]="availableAnchors?.length">
-    <div *ngSwitchCase=0>
-      No Accounts Found.
+  <div class="container col-xs-6">
+    <h2 class="sub-header">Available Anchors</h2>
+    <div [ngSwitch]="availableAnchors?.length">
+      <div *ngSwitchCase=0>
+        No Accounts Found.
+      </div>
+      <table *ngSwitchDefault class="table table-striped table-condensed">
+        <thead>
+          <tr>
+            <th class="w-50">
+              Name
+            </th>
+            <th>
+              Points
+            </th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let account of availableAnchors; let i = index">
+            <td>
+              {{account.userName}}
+            </td>
+            <td>
+              {{account.points}}
+              <button (click)="addAnchor(i)" class="btn btn-success font-weight-bold text-white float-right w-25">Add</button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
     </div>
-    <table *ngSwitchDefault class="table table-striped table-condensed">
-      <thead>
-        <tr>
-          <th class="w-50">
-            Name
-          </th>
-          <th>
-            Points
-          </th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let account of availableAnchors; let i = index">
-          <td>
-            {{account.userName}}
-          </td>
-          <td>
-            {{account.points}}
-            <button (click)="addAnchor(i)" class="btn btn-success font-weight-bold text-white float-right w-25">Add</button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
   </div>
+  <button class="btn btn-primary font-weight-bold text-white float-right w-25" [routerLink]="['/home', this.managerAcc.userID]">Return
+    to Dashboard</button>
 </div>
