--- a/Angular Project/src/app/navbar/navbar.component.html
+++ b/Angular Project/src/app/navbar/navbar.component.html
@@ -5,11 +5,11 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
-      <!-- <li class="nav-item">
-            <a class="nav-link" href="#">Login</a>
-          </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#" (click)="logout()">Logout</a>
+    </li>
 
-      <li class="nav-item">
+    <!-- <li class="nav-item">
         <a class="nav-link" href="#">Create Account</a>
       </li> -->
   </div>
