--- a/Angular Project/src/app/homepage/homepage.component.css
+++ b/Angular Project/src/app/homepage/homepage.component.css
@@ -12,9 +12,22 @@
     background-size: cover;
   }
 
-  h2, h4, th, td, h1 {
+   h4, th, td, h1 {
       color: #FFFFFF;
       position: relative;
       z-index: 10;
   }
 
+  h2{
+    padding-top: 30px;
+    padding-left: 100px;
+  }
+
+  h1{
+    color: black;
+  }
+
+#username{
+  padding-left: 200px;
+  font-size: 24px;
+}
