--- a/Angular Project/src/app/matable/matable.component.html
+++ b/Angular Project/src/app/matable/matable.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="managerAcc">
+<div *ngIf="manager">
   <div class="container col-xs-6">
     <app-navbar></app-navbar>
     <h2 class="sub-header">My Anchors</h2>
@@ -62,6 +62,6 @@
       </table>
     </div>
   </div>
-  <button class="btn btn-primary font-weight-bold text-white float-right w-25" [routerLink]="['/home', this.managerAcc.userID]">Return
+  <button class="btn btn-primary font-weight-bold text-white float-right w-25" [routerLink]="['/home', manager.userID]">Return
     to Dashboard</button>
 </div>
