--- a/Angular Project/src/app/calendar/calendar.component.html
+++ b/Angular Project/src/app/calendar/calendar.component.html
@@ -3,14 +3,16 @@
   <h1 class="text-center" *ngIf="!equipLoaded && !vehicleLoaded && !storiesLoaded">Please select a reservation.</h1>
 
   <div class="row justify-content-center btn-toolbar">
+    <button class="btn color-light-grey mr-2" (click)="loadExpertCalendar()">Experts</button>
     <button class="btn color-light-grey mr-2" (click)="loadVehicleCalendar()" >Vehicles</button>
-    <button class="btn color-light-grey ml-2 mr-2" (click)="loadEquipmentCalendar()">Equipment</button>
-    <button class="btn color-light-grey ml-2" (click)="loadStoriesCalendar()">Stories</button>
+    <button class="btn color-light-grey mr-2" (click)="loadEquipmentCalendar()">Equipment</button>
+    <button class="btn color-light-grey" (click)="loadStoriesCalendar()">Stories</button>
   </div>
 
   <div class="container justify-content-center">
     <app-vehicle-calendar *ngIf="vehicleLoaded" [anchor]='anchor'></app-vehicle-calendar>
     <app-equip-calendar *ngIf="equipLoaded" [anchor]='anchor'></app-equip-calendar>
     <app-stories-calendar *ngIf="storiesLoaded" [anchor]='anchor'></app-stories-calendar>
+    <app-expert-calendar *ngIf="expertLoaded" [anchor]='anchor'></app-expert-calendar>
   </div>
 </div>
