--- a/Angular Project/src/app/calendar/calendar.component.html
+++ b/Angular Project/src/app/calendar/calendar.component.html
@@ -1,12 +1,12 @@
 <app-navbar></app-navbar>
-<div class="color-grey">
-  <h1 class="text-center" *ngIf="!equipLoaded && !vehicleLoaded && !storiesLoaded && !expertLoaded">Please select a reservation.</h1>
+<div>
+  <h1 class="text-center mt-4" *ngIf="!equipLoaded && !vehicleLoaded && !storiesLoaded && !expertLoaded">Please select a reservation.</h1>
 
-  <div class="row justify-content-center btn-toolbar">
-    <button class="btn color-light-grey mr-2" (click)="loadExpertCalendar()">Experts</button>
-    <button class="btn color-light-grey mr-2" (click)="loadVehicleCalendar()" >Vehicles</button>
-    <button class="btn color-light-grey mr-2" (click)="loadEquipmentCalendar()">Equipment</button>
-    <button class="btn color-light-grey" (click)="loadStoriesCalendar()">Stories</button>
+  <div class="row justify-content-center mt-3">
+    <button class="btn btn-add" (click)="loadExpertCalendar()">Experts</button>
+    <button class="btn btn-add ml-2" (click)="loadVehicleCalendar()" >Vehicles</button>
+    <button class="btn btn-add ml-2" (click)="loadEquipmentCalendar()">Equipment</button>
+    <button class="btn btn-add ml-2" (click)="loadStoriesCalendar()">Stories</button>
   </div>
 
   <div class="container justify-content-center">
